# flake8-missing-annotations

./: .bumpversion.cfg  .pre-commit-config.yaml  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
flake8_missing_annotations/: __init__.py  __main__.py
