[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8-missing-annotations"
version = "0.0.0"
description = "Experimental Flake8 plugin to identify missing or incomplete argument annotations."
readme = "README.rst"
keywords = [ "annotations", "flake8", "pep484",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/python-formate/flake8-missing-annotations"
"Issue Tracker" = "https://github.com/python-formate/flake8-missing-annotations/issues"
"Source Code" = "https://github.com/python-formate/flake8-missing-annotations"

[project.entry-points."flake8.extension"]
MAN = "flake8_missing_annotations:Plugin"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "flake8_missing_annotations"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dep_checker]
allowed_unused = [ "flake8",]

[tool.importcheck]
always = [ "flake8_missing_annotations",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false
